fixed header z-index

--- a/styles.css
+++ b/styles.css
@@ -74,6 +74,7 @@ img {
   background-image: linear-gradient(to bottom, rgba(137, 207, 240, 0.944), transparent);
   -webkit-mask-image: linear-gradient(to bottom, rgba(255, 255, 255, 0.682), transparent);
   mask-image: linear-gradient(to bottom, rgb(255, 255, 255), transparent);
+  z-index: 50;
 }
 #sticky-header #menu-button,
 #sticky-header #home {
